<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sprek i Gjøvik</string>
    <string name="action_settings">Settings</string>

    <!-- MainActivity -->
    <string name="title_section1">Challenges</string>
    <string name="title_section2">Dynamic View</string>
    <string name="title_section3">Teams</string>
    <string name="message_delete">Delete current tour?</string>
    <string name="enable_gps">GPS is deactivated</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">OK</string>
    <string name="confirm_gps">Activate</string>

    <!-- Action Bar -->
    <string name="action_profile">Profile</string>

    <!-- Maps -->
    <string name="action_dynamicTour">Set tour criteria</string>
    <string name="action_currentTour">Resume tour</string>
    <string name="action_deleteSession">Discard current tour</string>
    <string name="action_maps">Open map</string>
    <string name="title_activity_maps">Maps</string>
    <string name="action_dynamicTour">Set tour criteria</string>
    <string name="enable_gps">Would you like to enable GPS?</string>
    <string name="no">I refuse</string>
    <string name="yes">Gladly</string>
    <string name="set_internet">Would you like to enable mobile data?</string>
    <string name="poles_prompt">Choose number of poles</string>
    <string name="choose_poles">Select the numbers of poles you wish to visit</string>
    <string name="choose_level">Select difficulty level</string>
    <string name="dialog_register_marker">Check in at pole:</string>
    <string name="dialog_register">Check in</string>
    <string name="dialog_cancel">Not there yet</string>
    <string name="pole_hint">Code of pole</string>

    <string-array name="poles_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>
    <string-array name="level_array">
        <item>1: Green</item>
        <item>2: Blue</item>
        <item>3: Red</item>
        <item>4: Black</item>
    </string-array>

    <string name="title_activity_dynamictour">DynamicTour</string>
    <string name="title_activity_on_click_listener">OnClickListener</string>
    <string name="dialog_time">Results</string>
    <string name="message_time">Your time was</string>
    <string name="dialog_done">OK</string>
    <string name="message_hours">Hours</string>
    <string name="message_minutes">minutes</string>
    <string name="message_seconds">seconds</string>
    <string name="message_congrats">Congratulations!</string>

    <!-- Profile -->
    <string name="title_activity_profile">Profile</string>
    <string name="log_out">Log Out</string>

    <!-- Login -->
    <string name="error_register">Error registering new user, please try again</string>
    <string name="successful_register">Registration successful</string>
    <string name="logged_in_as">Logged in as</string>

    <!-- Teams -->
    <string name="your_team">Your Team</string>
    <string name="all_teams">All Teams</string>
    <string name="team_highscore">Team Highscores</string>
    <string name="join_team">Join Team</string>
    <string name="search_teams">Search for team</string>
    <string name="select_team">Select Team</string>
    <string name="title_activity_display_team">DisplayTeam</string>
    <string name="view_members">Team Members</string>
    <string name="join_team">Join Team</string>
    <string name="join_successful">Join successful!</string>
    <string name="title_activity_team_highscore">TeamHighscore</string>
    <string name="hello_world">Hello world!</string>
    <string name="highscore_name">Name</string>
    <string name="score">Score</string>
    <string name="leave_team">Leave Team</string>
    <string name="leave_successful">You left the team!</string>

    <!-- Challenges -->
    <string name="select_challenge">Select Challenge</string>
    <string name="show_highscores">Highscores</string>
    <string name="show_log">Log</string>
    <string name="start_challenge">Start</string>
    <string name="preview_challenge">Preview</string>
    <string name="challenge_top">Up to the top</string>
    <string name="challenge_mjosa">Along Mjøsa</string>
    <string name="challenge_hospital">To the hospital and back</string>
    
    <!-- TEMP -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_challenges">Challenges</string>
    <string name="title_activity_launch_activity_test">LaunchActivityTest</string>

</resources>