<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
       <Button
        android:id="@+id/openMap" 
   		android:layout_width="fill_parent"  
   		android:layout_height="wrap_content"
   		android:text="@string/action_maps"
   		android:onClick="dynamicTest"/>
        
       <Button
        android:id="@+id/openDyanicTour" 
   		android:layout_width="fill_parent"  
   		android:layout_height="wrap_content"
   		android:text="@string/action_currentTour"
        android:onClick="currentTour"/>
        
        
       <Button
        android:id="@+id/deleteSession" 
   		android:layout_width="fill_parent"  
   		android:layout_height="wrap_content"
   		android:text="@string/action_deleteSession"
        android:onClick="deleteSession"/>

</LinearLayout>
